@@ -38,7 +38,7 @@ query_ip_addr=127.0.0.1
 remote_host=https://api.openeuler.org/pkgmanage
 
 ; A temporary directory for files downloaded from the network that are cleaned periodically
-temporary_directory=/var/run/pkgship
+temporary_directory=/tmp/pkgship
 
 [LOG]
 
